agent-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jenkins-agent-1
  namespace: dgb-ny2np2-jenkins
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jenkins-agent-1
  template:
    metadata:
      labels:
        app: jenkins-agent-1
    spec:
      containers:
        - name: agent
          image: harbor-ny2n.saas-n.com/dgb/jenkins/dgb-jenkins-base-agent@sha256:b2ee4599a1af9b81dd18b928c19e737c718da1e70714ceebbfd1aea5373ad2a5


          command: ["/bin/sh", "-c"]
          args:
            - >
              java -jar /usr/share/jenkins/agent.jar
              -webSocket
              -url "$JENKINS_URL"
              -workDir "/home/jenkins/agent"
              -secret "$JENKINS_SECRET"
              -name "$JENKINS_AGENT_NAME"


          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "1"
              memory: "1Gi"

          volumeMounts:
            - name: workspace
              mountPath: /home/jenkins/agent

      volumes:
        - name: workspace
          emptyDir: {}
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: jenkins-agent-2
  namespace: dgb-ny2np2-jenkins
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jenkins-agent-2
  template:
    metadata:
      labels:
        app: jenkins-agent-2
    spec:
      containers:
        - name: agent
          image: harbor-ny2n.saas-n.com/dgb/jenkins/dgb-jenkins-base-agent@sha256:b2ee4599a1af9b81dd18b928c19e737c718da1e70714ceebbfd1aea5373ad2a5
          imagePullPolicy: IfNotPresent

          command: ["/bin/sh", "-c"]
          args:
            - >
              
              java -jar /usr/share/jenkins/agent.jar
              -webSocket
              -url "$JENKINS_URL"
              -workDir "/home/jenkins/agent"
              -secret "$JENKINS_SECRET"
              -name "$JENKINS_AGENT_NAME"


          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "1"
              memory: "1Gi"

          volumeMounts:
            - name: workspace
              mountPath: /home/jenkins/agent

      volumes:
        - name: workspace
          emptyDir: {}
