deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dgb-idt-jkns14
  namespace: dgb-ny2np2-jenkins
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: dgb-idt-jkns14
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: dgb-idt-jkns14
    spec:
      serviceAccountName: dgb-ny2np2-jnks-svc-acc

      securityContext:
        fsGroup: 1000
        fsGroupChangePolicy: "OnRootMismatch"
        runAsUser: 1000
        runAsGroup: 1000

      # --- Runs BEFORE the main Jenkins container to populate plugins on the PVC ---
      containers:
        - name: dgb-idt-jkns14
          # image: harbor-ny2n.saas-n.com/dgb/jenkins/dgb-jenkins-base-master@sha256:fd7990522d6225d7336d34fce967c90125499de05b8ab682785e3dbe3b264b89
          # image: harbor-ny2n.saas-n.com/dgb/jenkins/dgb-jenkins-base-master@sha256:1da9519207e5bd114f3be395fd944a587c16a3781d1dc5122481c8a87b24682d
          image: harbor-ny2n.saas-n.com/dgb/jenkins/dgb-jenkins-base-master:1.0.1
          imagePullPolicy: IfNotPresent

          ports:
            - name: http
              containerPort: 8080
            - name: agent
              containerPort: 50000

          readinessProbe:
            httpGet:
              path: /login
              port: 8080
            initialDelaySeconds: 120
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 18

          livenessProbe:
            httpGet:
              path: /login
              port: 8080
            initialDelaySeconds: 180
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 12

          resources:
            requests:
              cpu: "500m"
              memory: "2Gi"
            limits:
              cpu: "2"
              memory: "4Gi"

          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: false
            capabilities:
              drop: ["ALL"]

          volumeMounts:
            - name: jenkins-home
              mountPath: /var/jenkins_home
            - name: jcasc
              mountPath: /var/jenkins_home/casc_configs

      volumes:
        - name: jenkins-home
          persistentVolumeClaim:
            claimName: dgb-idt-jkns14-home-rbd

        - name: jcasc
          configMap:
            name: dgb-idt-jkns14-jcasc
            items:
              - key: jenkins.yaml
                path: jenkins.yaml

      # affinity:
      #   podAntiAffinity:
      #     preferredDuringSchedulingIgnoredDuringExecution:
      #       - weight: 100
      #         podAffinityTerm:
      #           topologyKey: kubernetes.io/hostname
      #           labelSelector:
      #             matchLabels:
      #               app.kubernetes.io/name: dgb-idt-jkns14
