fix-permission.yaml
apiVersion: v1
kind: Pod
metadata:
  name: jenkins-permission-fix
  namespace: jenkins
spec:
  restartPolicy: Never
  containers:
  - name: fixer
    image: busybox
    securityContext:
      runAsUser: 0
    command:
      - sh
      - -c
      - |
        echo "Fixing permissions...";
        chown -R 1000:1000 /var/jenkins_home;
        chmod -R 775 /var/jenkins_home;
        echo "Done";
        sleep 5
    volumeMounts:
      - name: jenkins-home
        mountPath: /var/jenkins_home
  volumes:
    - name: jenkins-home
      hostPath:
        path: /jenkins-home
        type: Directory
