jenkins-copy.yaml
apiVersion: v1
kind: Pod
metadata:
  name: jenkins-copy
spec:
  restartPolicy: Never
  containers:
    - name: copy
      image: alpine:3.20
      command: ["/bin/sh","-c"]
      args:
        - |
          set -e
          echo "✅ Copying OLD Jenkins home from /old to /new"
          echo "📂 Source contents:"
          ls -la /old | head -n 30
          echo "🚚 Copying..."
          cp -a /old/. /new/
          echo "✅ COPY_DONE"
          sleep 2
      volumeMounts:
        - name: old
          mountPath: /old
        - name: new
          mountPath: /new
  volumes:
    # ✅ CONFIRMED OLD JENKINS HOME
    - name: old
      hostPath:
        path: /jenkins-home
        type: Directory
    # ✅ NEW PVC-BASED JENKINS HOME
    - name: new
      persistentVolumeClaim:
        claimName: jenkins-home
