service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dgb-idt-jkns14
  namespace: dgb-ny2np2-jenkins
  labels:
    app.kubernetes.io/name: dgb-idt-jkns14
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: dgb-idt-jkns14
  ports:
    - name: http
      port: 8080
      targetPort: http
    - name: agent
      port: 50000
      targetPort: agent
