networkpolicy.yaml
# apiVersion: networking.k8s.io/v1
# kind: NetworkPolicy
# metadata:
#   name: dgb-idt-jkns14-networkpolicy
#   namespace: dgb-ny2np2-jenkins
# spec:
#   podSelector:
#     matchLabels:
#       app.kubernetes.io/name: dgb-idt-jkns14
#   ingress:
#     - from:
#         - podSelector: {} # allow from same namespace
#   egress:
#     - to:
#         - namespaceSelector: {} # allow egress in cluster
#       ports:
#         - protocol: UDP
#           port: 53
#         - protocol: TCP
#           port: 53
#   policyTypes: ["Ingress","Egress"]

# apiVersion: networking.k8s.io/v1
# kind: NetworkPolicy
# metadata:
#   name: allow-all-within-namespace
#   namespace: dgb-ny2np2-jenkins
# spec:
#   podSelector: {}
#   policyTypes:
#   - Ingress
#   - Egress
#   ingress:
#   - from:
#     - podSelector: {}
#   egress:
#   - to:
#     - podSelector: {}

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-all
  namespace: dgb-ny2np2-jenkins
spec:
  podSelector: {}        # Select all pods
  ingress:
    - {}                 # Allow all ingress
  egress:
    - {}                 # Allow all egress
  policyTypes:
    - Ingress
    - Egress
